<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kennykanp.bmmbusiness.CreateAccountDriverActivity">

    <include layout="@layout/actionbar_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_marginTop="50dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/edittext_margin_createaccount">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/name_createAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_name"
                    android:inputType="textPersonName"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/edittext_margin_createaccount">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/last_name_createAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_lastName"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/edittext_margin_createaccount">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/number_phone_createAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_phone_number"
                    android:inputType="textVisiblePassword"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/edittext_margin_createaccount">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/user_createAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_user_id"
                    android:inputType="text"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/edittext_margin_createaccount">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/email_createAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/edittext_margin_createaccount">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/password_createAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/EditTextBlack"
                android:layout_marginTop="@dimen/edittext_margin_createaccount">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/confirm_password_createAccount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_email"
                    android:inputType="textPassword"/>
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/signInLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/Register_Account"
                android:theme="@style/RaisedButtonDark" />

        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>
